--- a/KhanAcademy/pages/newsPage/newsPage.css
+++ b/KhanAcademy/pages/newsPage/newsPage.css
@@ -13,6 +13,7 @@
 
 #newsPagePanel #newsLv .win-surface {
     margin-left:115px;
+    margin-right:60px;
     margin-bottom:100px;
 }
 
